readme file added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <main class="md:max-w-6xl mx-auto">
         <div class="p-4 mt-20 w-8/12 mx-auto">
-            <h1 class="text-3xl text-center text-white hidden md:block">Reduce the browser window size to less than 768px to see hamburger button and toggle effect.</h1>
+            <h1 class="text-3xl text-center text-white hidden md:block">Reduce the browser window width to less than 768px to see hamburger button and toggle effect.</h1>
             <h1 class="text-2xl text-center text-white md:hidden">Click the hamburger button.</h1>
         </div>
     </main>
